This updates my htmil file to integrate the new script file and adds basic scripts to the file

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         };
         animate();
     </script>
-    <!--<script src="animations.js"></script>-->
+    <script src="animations.js"></script>
 
     <!--<script>
         gsap.to(".introductory-metaphor", {
