This update adds the tools section to my site and now i am left with its responsive design and also functionality

--- a/index.html
+++ b/index.html
@@ -61,37 +61,8 @@
             <clipPath id="triangleClip" clipPathUnits="objectBoundingBox">
                 <polygon points="0,0 0,1 1,1"/>
             </clipPath>
-
-            <g id="html-5">
-                <path style="fill:none;stroke:#000000;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" d="
-                    M37.787,28.147l1.542-19.489C39.421,7.495,38.502,6.5,37.335,6.5H10.665c-1.167,0-2.086,0.995-1.994,2.158l0.564,7.133"/>
-                <path style="fill:none;stroke:#000000;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" d="
-                    M9.759,22.415l1.2,15.159c0.062,0.784,0.578,1.46,1.319,1.725l11.047,3.959c0.436,0.156,0.913,0.156,1.349,0l11.047-3.959
-                    c0.741-0.265,1.257-0.941,1.319-1.725l0.281-3.551"/>
-                <path d="M31.371,16H18.22l0.44,6h12.783c0.581,0,1.04,0.494,0.997,1.074l-0.731,9.874c-0.03,0.406-0.304,0.754-0.692,0.878
-                L24.3,35.981c-0.202,0.065-0.418,0.064-0.619-0.003l-6.527-2.158c-0.384-0.127-0.653-0.472-0.683-0.875l-0.25-3.333
-                C16.156,28.742,16.844,28,17.717,28h0c0.786,0,1.438,0.606,1.496,1.39l0.148,2l4.65,1.53l4.81-1.54L29.29,25H16.808
-                c-0.523,0-0.958-0.403-0.997-0.925l-0.75-10C15.017,13.495,15.476,13,16.058,13h15.313c0.874,0,1.562,0.744,1.496,1.615v0
-                C32.806,15.396,32.155,16,31.371,16z"/>
-            </g>
-            <g id=bootstrap>
-                <path d="M18.432,5c0.005,0,0.019,0,0.05,0.032c0.046,0.047,0.097,0.142,0.094,0.253c-0.061,1.803,0.096,3.346,0.469,4.584
-                c0.274,0.91,0.697,1.619,1.276,2.132c-0.58,0.513-1.002,1.221-1.276,2.132c-0.372,1.238-0.53,2.78-0.469,4.584
-                c0.004,0.111-0.048,0.205-0.094,0.253C18.451,19,18.438,19,18.432,19H5.569c-0.005,0-0.019,0-0.05-0.032
-                c-0.046-0.047-0.097-0.141-0.094-0.253c0.061-1.804-0.097-3.346-0.469-4.584C4.683,13.221,4.26,12.513,3.681,12
-                c0.58-0.513,1.003-1.221,1.276-2.132c0.372-1.238,0.53-2.78,0.469-4.584C5.422,5.174,5.474,5.079,5.519,5.032
-                C5.55,5,5.564,5,5.569,5H18.432 M18.432,3H5.569C4.314,3,3.385,4.129,3.427,5.352c0.04,1.176-0.012,2.698-0.385,3.94
-                C2.667,10.538,2.034,10.899,1,11v2c1.034,0.101,1.667,0.462,2.042,1.708c0.373,1.242,0.425,2.765,0.385,3.94
-                C3.385,19.871,4.314,21,5.569,21h12.863c1.255,0,2.184-1.129,2.142-2.352c-0.04-1.176,0.012-2.698,0.385-3.94
-                C21.334,13.462,21.966,13.101,23,13v-2c-1.034-0.101-1.666-0.462-2.04-1.708c-0.373-1.242-0.425-2.765-0.385-3.94
-                C20.616,4.129,19.688,3,18.432,3L18.432,3z"/>
-                <path d="M8,17V7.033h4.135c0.907,0,1.684,0.245,2.243,0.708c0.579,0.479,0.885,1.149,0.885,1.939c0,0.804-0.438,1.559-1.087,1.993
-                c0.958,0.41,1.557,1.285,1.557,2.368c0,0.905-0.341,1.661-0.984,2.184C14.121,16.732,13.225,17,12.154,17H8z M11.85,15.267
-                c1.725,0,1.725-0.92,1.725-1.223c0-0.517-0.188-1.204-1.811-1.204h-1.639v2.427H11.85z M11.466,11.093
-                c0.762,0,1.671-0.194,1.671-1.12c0-0.679-0.457-1.022-1.359-1.022h-1.652v2.143H11.466z"/>
-            </g>
-            <clipPath id="js">
-                <path d="M 11.5 6 C 8.4818182 6 6 8.4818182 6 11.5 L 6 28.558594 A 1.50015 1.50015 0 1 0 9 28.558594 L 9 11.5 C 9 10.118182 10.118182 9 11.5 9 L 36.5 9 C 37.881818 9 39 10.118182 39 11.5 L 39 12.744141 A 1.50015 1.50015 0 1 0 42 12.744141 L 42 11.5 C 42 8.4818182 39.518182 6 36.5 6 L 11.5 6 z M 40.476562 17.095703 A 1.50015 1.50015 0 0 0 39 18.617188 L 39 36.5 C 39 37.881818 37.881818 39 36.5 39 L 11.5 39 C 10.118182 39 9 37.881818 9 36.5 L 9 34.744141 A 1.50015 1.50015 0 1 0 6 34.744141 L 6 36.5 C 6 39.518182 8.4818182 42 11.5 42 L 36.5 42 C 39.518182 42 42 39.518182 42 36.5 L 42 18.617188 A 1.50015 1.50015 0 0 0 40.476562 17.095703 z M 22.355469 22.400391 L 22.355469 32.0625 C 22.355469 33.5455 21.793359 33.925781 20.818359 33.925781 C 19.799359 33.925781 19.089047 33.291844 18.623047 32.464844 L 16.207031 33.925781 C 16.906031 35.406781 18.622047 37 20.998047 37 C 23.628047 37 25.429688 35.601297 25.429688 32.529297 L 25.429688 22.400391 L 22.355469 22.400391 z M 31.925781 22.400391 C 29.306781 22.400391 27.630859 24.074437 27.630859 26.273438 C 27.630859 28.660438 29.037344 29.790406 31.152344 30.691406 L 31.886719 31.005859 C 33.223719 31.589859 33.882812 31.946172 33.882812 32.951172 C 33.882813 33.790172 33.244297 34.398438 32.029297 34.398438 C 30.583297 34.398437 29.900484 33.414672 29.271484 32.388672 L 26.966797 33.925781 C 27.827797 35.626781 29.374656 37 32.097656 37 C 34.882656 37 36.955078 35.554063 36.955078 32.914062 C 36.955078 30.465063 35.550594 29.375594 33.058594 28.308594 L 32.324219 27.994141 C 31.066219 27.450141 30.521484 27.094844 30.521484 26.214844 C 30.521484 25.503844 31.066781 24.958984 31.925781 24.958984 C 32.767781 24.958984 33.3095 25.313844 33.8125 26.214844 L 36.095703 24.748047 C 35.129703 23.049047 33.789781 22.400391 31.925781 22.400391 z"/>
+            <clipPath id="allStackItems" clipPathUnits="objectBoundingBox">
+                <path d="M 0.05 0 L 0.95 0 L 0.95 0.2 L 0.9 0.35 L 0.9 0.65 L 0.95  0.8 L 0.95 1 L 0.05 1 L 0.05 0.8 L 0 0.65 L 0 0.35 L 0.05 0.2 Z" />
             </clipPath>
         </defs>
     </svg>
@@ -183,7 +154,7 @@
                             <ol>
                                 <li><p>&#10133;&nbsp;Flexible Search Parameters</p></li>
                                 <li><p>&#10133;&nbsp;Real Browser Automation</p></li>
-                                <li><p>&#10133;&nbsp;Detailed Data Extraction</p></li>
+                                <li><p>&#10133;&nbsp;Detailed And Structured Data Extraction</p></li>
                             </ol>
                         </div>
                     </div>
@@ -217,23 +188,47 @@
         <section id="stack">
             <div>
                 <h2>Ajayi Eniola Adedayo</h2>
-                <p>Fullstack web developer, Web Scraper, Economist</p>
+                <p></p>
             </div>
             <div>
                 <label for="my-tools">My Tools:</label>
                 <div id="my-tools"> 
-                    <!--<img src="images/icons8-bootstrap-48.png">
-                    <img src="images/icons8-chatgpt.png">
-                    <img src="images/icons8-claude.png">
-                    <img src="images/icons8-css.png">
-                    <img src="images/icons8-django.png">
-                    <img src="images/icons8-git.png">
-                    <img src="images/icons8-github.png">
-                    <img src="images/icons8-html.png">
-                    <img src="images/icons8-javascript.png">
-                    <img src="images/icons8-postman-inc.png">
-                    <img src="images/icons8-python.png">
-                    <img src="images/icons8-tailwind-css.png">-->
+                    <div title="bootstrap">
+                        <img src="images/icons8-bootstrap-48.png">
+                    </div>
+                    <div title="chatGPT">
+                        <img src="images/icons8-chatgpt.png">
+                    </div>
+                    <div title="claude AI">
+                        <img src="images/icons8-claude.png">
+                    </div>
+                    <div title="CSS">
+                        <img src="images/icons8-css.png">
+                    </div>
+                    <div title="Django">
+                        <img src="images/icons8-django.png">
+                    </div>
+                    <div title="Git">
+                        <img src="images/icons8-git.png">
+                    </div>
+                    <div title="GitHub">
+                        <img src="images/icons8-github.png">
+                    </div>
+                    <div title="HTML5">
+                        <img src="images/icons8-html.png">
+                    </div>
+                    <div title="JavaScript">
+                        <img src="images/icons8-javascript.png">
+                    </div>
+                    <div title="Postman">
+                        <img src="images/icons8-postman-inc.png">
+                    </div>
+                    <div title="Python">
+                        <img src="images/icons8-python.png">
+                    </div>
+                    <div title="Tailwind css">
+                        <img src="images/icons8-tailwind-css.png">
+                    </div>
                 </div>
             </div>
             <hr>
