--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <section id="stack">
             <div>
                 <h2>Ajayi Eniola Adedayo</h2>
-                <p></p>
+                <p>tdgjhk</p>
             </div>
             <div>
                 <label for="my-tools">My Tools:</label>
