This updates marks the end of responsive design and also makes a minor edit to my index.html

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <section id="contact-me">
             <div>
                 <p>
-                    Follow me on X | Check my code repositories out | Hire me on Upwork | LinkedIn | Get in touch
+                    Follow&nbsp;me&nbsp;on&nbsp;X | Check&nbsp;my&nbsp;code&nbsp;repositories&nbsp;out | Hire&nbsp;me&nbsp;on&nbsp;Upwork | LinkedIn | Get&nbsp;in&nbsp;touch
                 </p>
                 <div id="visible-contact">
                     <div>
