This update handles the nav links, highlights active relevant sections via js and css, and also links the new js file to my html

--- a/index.html
+++ b/index.html
@@ -259,5 +259,6 @@
     </div>
     <script src="background.js"></script>
     <script src="animations.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
