This updates the site so the contact links have their styles predefined in my script js and some in my css too

--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
                     </div>
                 </div>
             </div>
-            <hr>
         </section>
         <section id="stack">
             <div>
@@ -231,7 +230,7 @@
         <section id="contact-me">
             <div>
                 <p>
-                    Follow&nbsp;me&nbsp;on&nbsp;X | Check&nbsp;my&nbsp;code&nbsp;repositories&nbsp;out | Hire&nbsp;me&nbsp;on&nbsp;Upwork | LinkedIn | Get&nbsp;in&nbsp;touch
+                    <a href="https://x.com/k3nn3ry">Follow&nbsp;me&nbsp;on&nbsp;X</a> | <a href="https://github.com/yungKnight">Check&nbsp;my&nbsp;code&nbsp;repositories&nbsp;out</a> | Hire&nbsp;me&nbsp;on&nbsp;Upwork | <a href="https://www.linkedin.com/in/ajayi-eniola-8a5a2431a/">LinkedIn</a> | <a href="mailto:Badoknight1@gmail.com">Get&nbsp;in&nbsp;touch</a>
                 </p>
                 <div id="visible-contact">
                     <div>
