This update adds some links to relevant positions and also customizes them for an organized view

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <canvas id="bg"></canvas>
+    <div>
     <div id="introductory-speech">
         <h2 class="introductory-metaphor">
             <span>Many stars populate the sky,</span><span> but only one moon</span>
@@ -109,7 +110,7 @@
                             Edunalytica is more than just a frontend, neither is it just another dashboard- as its name "Edunalytica"- a combination of the words "Educational" and "Analytic" implies, it is a logic that brings a clarity layer to existing grades data and enables personalized optimization advise.
                         </p>
                         <span>
-                            Check it out on here: edunalytica.onrender.com
+                            Check it out on here: <a href="https://edunalytica.onrender.com">See this project</a> 
                         </span>
                         <hr>
                         <div>
@@ -164,7 +165,7 @@
                             Guessmaster is minimal on the surface, but layered in its design. With no logins, no downloads, a pure frontend game— just play. With levels of increasing difficulty that test not just luck, but logic, and intuition. GuessMaster isn’t just about guessing the right number— it’s about tuning into the pattern behind randomness, one submission at a time.
                         </p>
                         <span>
-                            Check it out on here: yungknight.github.io/GuessMaster
+                            Check it out on here: <a href="https://yungKnight.github.io/GuessMaster">See this project</a> 
                         </span>
                         <hr>
                         <div>
@@ -256,6 +257,7 @@
             </p>
         </section>
     </div>
+</div>
     <script src="background.js"></script>
     <script src="animations.js"></script>
     <script src="script.js"></script>
