This update handles the scroll issue on touch devices

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <section id="contact-me">
             <div>
                 <p>
-                    <a href="https://x.com/k3nn3ry">Follow&nbsp;me&nbsp;on&nbsp;X</a> | <a href="https://github.com/yungKnight">Check&nbsp;my&nbsp;code&nbsp;repositories&nbsp;out</a> | Hire&nbsp;me&nbsp;on&nbsp;Upwork | <a href="https://www.linkedin.com/in/ajayi-eniola-8a5a2431a/">LinkedIn</a> | <a href="mailto:Badoknight1@gmail.com">Get&nbsp;in&nbsp;touch</a>
+                    <a href="https://x.com/k3nn3ry">Follow&nbsp;me&nbsp;on&nbsp;X</a> | <a href="https://github.com/yungKnight">Check&nbsp;my&nbsp;code&nbsp;repositories&nbsp;out</a> | <a href="https://www.upwork.com/freelancers/~019145095430a59a08">Hire&nbsp;me&nbsp;on&nbsp;Upwork</a> | <a href="https://www.linkedin.com/in/ajayi-eniola-8a5a2431a/">LinkedIn</a> | <a href="mailto:Badoknight1@gmail.com">Get&nbsp;in&nbsp;touch</a>
                 </p>
                 <div id="visible-contact">
                     <div>
